# svgbob

./: .gitignore  .travis.yml  Architecture.md  Behavior.md  Cargo.toml  Changelog.md  Dockerfile  LICENSE  README.md  TODO.md  ascii_art.html  comic.html  deny.toml  index.html  memes.html  memes2.html  memes3.html  spec.html  spec.md  vim.html
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
.scripts/: publish.sh
client/: index.html
crates/svgbob/: Cargo.toml  spec.md  test.sh
crates/svgbob/examples/: circles.rs  circles_generated.rs
crates/svgbob/src/: buffer.rs  map.rs  merge.rs  util.rs
crates/svgbob/src/buffer/: cell_buffer.rs  fragment_buffer.rs  property_buffer.rs  string_buffer.rs
crates/svgbob/src/buffer/cell_buffer/: contacts.rs  endorse.rs
crates/svgbob/src/buffer/cell_buffer/cell/: cell_grid.rs
crates/svgbob/src/buffer/fragment_buffer/: direction.rs  fragment_span.rs  fragment_tree.rs
crates/svgbob/src/buffer/fragment_buffer/fragment/: arc.rs  circle.rs
crates/svgbob/src/buffer/property_buffer/: property.rs
crates/svgbob/src/map/: ascii_map.rs
crates/svgbob/test_data/: demo.bob  example.bob
crates/svgbob_cli/: Cargo.toml
crates/svgbob_cli/src/: main.rs
crates/svgbob_server/: Cargo.toml
examples/: .gitignore  ascii_art.rs  comic.bob  comic.rs  demo.rs  long.bob  long.sh  memes.bob  memes.rs  memes2.bob  memes2.rs  memes3.bob  memes3.rs  nice_to_have.bob  render.rs  vim.bob  vim.rs
snapcraft/: snapcraft.yaml
src/: .lib.rs.swp  lib.rs  optimizer.rs
svgbob/: Cargo.toml  Changelog.md  TODO.md  concepts.md  run_example.sh  run_simple.sh  run_svg_to_ascii.sh  rustfmt.toml
svgbob/examples/: circuits.bob  circuits.rs  demo.bob  demo.rs  example.rs  grid.rs  issue19.rs  issue25.rs  long.bob  long.rs  simple.rs  spec1.rs
svgbob/src/: block.rs  box_drawing.rs  buffer.rs  element.rs  enhance.rs  enhance_circle.rs  enhance_circles.rs  focus_char.rs  fragments.rs  grid.rs  lib.rs  loc.rs  loc_block.rs  location.rs  map.rs  optimizer.rs  options.rs  patterns.rs  point.rs  point_block.rs  properties.rs  settings.rs  svg_element.rs  tests.rs  util.rs
svgbob/src/buffer/: cell_buffer.rs  fragment_buffer.rs  property_buffer.rs  string_buffer.rs
svgbob/src/buffer/cell_buffer/: cell.rs  contacts.rs  endorse.rs  settings.rs  span.rs
svgbob/src/buffer/cell_buffer/cell/: cell_grid.rs
svgbob/src/buffer/fragment_buffer/: direction.rs  fragment.rs  fragment_tree.rs
svgbob/src/buffer/fragment_buffer/fragment/: arc.rs  circle.rs  line.rs  marker_line.rs  polygon.rs  rect.rs  text.rs
svgbob/src/buffer/property_buffer/: property.rs
svgbob/src/map/: ascii_map.rs  circle_map.rs  unicode_map.rs
svgbob/test_data/: circles.bob  demo.bob  example.bob  merge.bob  simple.bob
svgbob/tests/: bench.rs  issue38.rs  issues.rs  mem_consumption.rs  simple_shapes.rs  spec.rs  styling.rs  utf8.rs
svgbob_cli/: Cargo.toml  ascii_art.html  index.html  memes.html  test.html
svgbob_cli/examples/: ascii_art.bob  ascii_art.rs  comic.bob  comic.rs  demo.rs  long.bob  memes2.rs  memes3.rs  render.rs  schematic.bob  simple.rs
svgbob_cli/src/: main.rs
web/: index.hbs
