[package]
name = "svgbob"
version = "0.1.7"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
description = "Transform your ascii diagrams into happy little SVG"
repository = "https://github.com/ivanceras/svgbobrus"
documentation = "https://docs.rs/svgbob"
keywords = ["ascii", "svg", "convert", "bob"]
license = "Apache-2.0"

[dependencies]
svg = "0.5"
clap = "2.16"
unicode-width = "0.1"

[lib]

[[bin]]
name = "svgbob"

[dev-dependencies]
handlebars = "0.21"
