[workspace]
members = [
    "packages/svgbob",
    "packages/svgbob_cli",
    "packages/svgbob_server",
]

[patch.crates-io]
#mt-dom = { git = "https://github.com/ivanceras/mt-dom.git", branch = "master" }
#sauron = { git = "https://github.com/ivanceras/sauron.git", branch = "develop" }
#jss = { path = "../jss" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

