[package]
name = "svgbob"
version = "0.5.0"
authors = ["lee"]
edition = "2018"
publish = true
license = "Apache-2.0"

[dependencies]
nalgebra = "0.18.0"
ncollide2d = "0.19.1"
lazy_static = "1.3.0"
sauron = { version = "0.21.0", default-features = false}
unicode-width = "0.1.5"
itertools = "0.8.0"
pom = { version = "3.1.0" }

[dev-dependencies]
sauron_vdom = {version = "0.21.0"}
serde_json = "1.0.41"

