[package]
name = "svgbob"
version = "0.5.0-alpha.12"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
description = "Transform your ascii diagrams into happy little SVG"
repository = "https://github.com/ivanceras/svgbob"
documentation = "https://docs.rs/svgbob"
keywords = ["ascii","plain","text", "svg", "bob"]
license = "Apache-2.0"

[dependencies]
nalgebra = "0.18.0"
ncollide2d = "0.19.1"
lazy_static = "1.3.0"
sauron = { version = "0.34" }
unicode-width = "0.1.5"
itertools = "0.8.0"
pom = { version = "3.1.0" }



[features]
# This affects the rendering of text nodes
# if the svg is rendered statically, characters such as '<' needed to be escaped
# while if it is rendered in the dom, no escaping is needed.
with-dom = []

