
[package]
name = "svgbob_cli"
version = "0.1.8"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
description = "Transform your ascii diagrams into happy little SVG"
repository = "https://github.com/ivanceras/svgbobrus"
documentation = "https://docs.rs/svgbob"
keywords = ["ascii", "svg", "convert", "bob"]
license = "Apache-2.0"

[dependencies]
svgbob = "0.1"
clap = "2.16"
svg = "0.5"

[[bin]]
name = "svgbob"
path = "src/main.rs"

[dev-dependencies]
handlebars = "0.21"
