
[package]
name = "svgbob_cli"
version = "0.5.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
description = "Transform your ascii diagrams into happy little SVG"
repository = "https://github.com/ivanceras/svgbobrus"
documentation = "https://docs.rs/svgbob"
keywords = ["ascii", "svg", "convert", "bob"]
license = "Apache-2.0"

[dependencies]
svgbob = { version = "0.5.0-alpha.0", path = "../svgbob" }
clap = "2.16"


[[bin]]
name = "svgbob"
path = "src/main.rs"

